# waterfall

./: Cargo.toml  README.md  main.rs  release.sh  waterfall_chrome.bat  waterfall_msedge.bat
.github/workflows/: release.yml
core/: mod.rs
desync/: mod.rs
desync/disoob/: mod.rs
desync/disorder/: mod.rs
desync/disorder/utils/: mod.rs
desync/fake/: mod.rs
desync/oob/: mod.rs
desync/split/: mod.rs
desync/split/utils/: mod.rs
desync/utils/: mod.rs
drop/: mod.rs
duplicate/: mod.rs
examples/: filters.sh  list_discord.txt  list_hard_filters.txt  list_youtube.txt  simple_config.sh  waterfall.bat
net/: mod.rs
parsers/: mod.rs
socks/: mod.rs
src/: main.rs  tamper  tamper.rs  utils.rs
src/desync/disoob/: mod.rs
src/desync/disorder/: mod.rs
src/desync/fake/: mod.rs
src/desync/oob/: mod.rs
src/desync/split/: mod.rs
src/drop/: mod.rs
src/duplicate/: mod.rs
src/features/: mod.rs
src/features/disoob/: mod.rs
src/features/disorder/: mod.rs
src/features/fake/: mod.rs
src/features/fake/utils/: mod.rs
src/features/oob/: mod.rs
src/features/oob/utils/: mod.rs
src/features/split/: mod.rs
src/net/: mod.rs
src/parsers/: mod.rs
src/socks/: mod.rs
tamper/: mod.rs
