[package]
name = "Waterfall"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = "0.4.47"
libc = "0.2.169"
serde_json = "1.0.140"
socket2 = "0.5.9"
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "rt-multi-thread"] }

[[bin]]

name = "waterfall"
path = "main.rs"
